<resources>
    <string name="app_name">PronuntiApp</string>
    <string name="login">Accedi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Registrati</string>
    <string name="hai_gia_un_account_accedi">Hai già un account? Accedi</string>
    <string name="non_hai_un_account_registrati">Non hai un account? Registrati</string>
    <string name="logout">Esci</string>
    <string name="client_id">928330153737-rq866lt51639dmhg84ssh8m4kqmdlqct.apps.googleusercontent.com</string>
    <string name="accedi_con_google">Accedi con Google</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="codice_fiscale">Codice fiscale</string>
    <string name="codice_fiscale_genitore_registrato">Codice fiscale genitore</string>
    <string name="db_url">https://pronuntiapp-register-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="logopedista">Logopedista</string>
    <string name="login_genitore">Accedi come genitore</string>
    <string name="login_logopedista">Accedi come logopedista</string>
    <string name="crea_un_account_genitore">Crea un account genitore</string>
    <string name="crea_un_account_logopedista">Crea un account logopedista</string>
    <string name="registra_un_nuovo_paziente">Registra un nuovo paziente</string>
    <string name="sono_un_genitore">Sono un genitore</string>
    <string name="sono_un_logopedista">Sono un logopedista</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="refreshing">Caricamento</string>
    <string name="nav_open">Navigation Open\n</string>
    <string name="nav_close">Navigation Close\n\n</string>
    <string name="registrazione_effettuata_con_successo">Registrazione Effettuata con successo</string>
    <string name="paziente_registrato_con_successo">Paziente registrato con successo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registra_bambino">Registra bambino</string>
    <string name="registrazione_bambini">Registrazione Bambini</string>
    <string name="registrazione_paziente">Registrazione Paziente</string>
    <string name="registra_paziente">Registra Paziente</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="add_button_description">Aggiungi un nuovo paziente</string>
    <string name="assegna_terapia">Assegna terapia</string>
    <string name="annulla">Annulla</string>
    <string name="seleziona_il_giorno">Seleziona il giorno</string>
    <string name="seleziona_gli_esercizi">Seleziona gli esercizi</string>
    <string name="tipo_es3">Riconoscimento di coppie minime</string>
    <string name="tipo_es2">Ripetizione di sequenze di parole</string>
    <string name="tipo_es1">Denominazione di immagini</string>
    <string name="descrizione_es1">"Data una immagine, il bambino deve riconoscere la parola associata ad essa. Al bambino sono forniti fino a 3 aiuti audio per facilitargli il riconoscimento della parola. "</string>
    <string name="descrizione_es2">Dato un audio che riproduce 3 parole in sequenza, il bambino deve registrare un audio ripetendo le parole nella sequenza corretta.</string>
    <string name="descrizione_es3">Date due immagini e la riproduzione audio di una parola, il bambino deve riconoscere l’immagine giusta a cui la parola si riferisce.</string>
    <string name="descrizione_es1_game">Guarda l\'immagine e registra un audio in cui pronunci la parola corrispondente.\nHai fino a 3 aiuti audio per aiutarti a riconoscere la parola.</string>
    <string name="descrizione_es2_game">Ascolta le tre parole in sequenza e registra un audio ripetendole nella giusta sequenza.</string>
    <string name="descrizione_es3_game">"Guarda le due immagini e ascolta l'audio che riproduce una parola. Scegli l'immagine corretta a cui la parola si riferisce.</string>
    <string name="ripeti_sequenza_di_parole">Ripeti la sequenza di parole</string>
    <string name="riconosci_immagine">Riconosci\nl\'immagine</string>
    <string name="seleziona_immagine_corretta">Seleziona l\'immagine corretta</string>
    <string name="inserisci_una_parola_valida">Inserisci una parola valida</string>
    <string name="inserisci_le_immagini">Inserisci le immagini</string>
    <string name="inserisci_un_nome_valido">Inserisci un nome valido</string>
    <string name="esercizio_creato">Esercizio creato</string>
    <string name="inserisci_almeno_un_aiuto">Inserisci almeno un aiuto</string>
    <string name="aiuto_2_vuoto">Aiuto 2 è vuoto</string>
    <string name="immagine_acquisita">Immagine acquisita</string>
    <string name="immagine_non_acquisita">Immagine non acquisita</string>
    <string name="inserisci_3_parole">Inserisci 3 parole</string>
    <string name="inserisci_un_immagine">Inserisci un\'immagine</string>
    <string name="nome_esercizio_gia_usato">Nome esercizio già usato</string>
    <string name="immagine_non_inserita_nello_storage">Immagine non inserita nello storage</string>
    <string name="oggetto_impostato_come_predefinito">Oggetto impostato come predefinito</string>
    <string name="esercizio_eliminato">Esercizio eliminato</string>
    <string name="account_gia_registrato">Account già registrato</string>
    <string name="paziente_eliminato">Paziente eliminato</string>
    <string name="nessun_esercizio">Nessun esercizio</string>
    <string name="gli_esercizi_devono_essere_diversi_fra_loro">Gli esercizi devono essere diversi fra loro</string>
    <string name="giorno_non_disponibile">Giorno non disponibile</string>
    <string name="terapia_salvata">Terapia salvata</string>
    <string name="giorno_non_consentito">"Giorno non consentito "</string>
    <string name="terapia_eliminata">Terapia eliminata</string>
    <string name="ben_fatto">Ben fatto!</string>
    <string name="congratulazioni_hai_ottenuto">Congratulazioni! :)\nHai ottenuto:</string>
    <string name="_100_monete">100 Monete</string>
    <string name="_500_punti_esperienza">500 Punti Esperienza</string>
    <string name="inserisci_ora">Inserisci Ora</string>
    <string name="aggiungi_appuntamento">Aggiungi appuntamento</string>
    <string name="i_miei_figli">I miei figli</string>
    <string name="_4_quarto_classificato">4) Quarto classificato</string>
    <string name="_18_marzo_74">18 Marzo 74</string>
    <string name="pippo_baudo">Pippo Baudo</string>
    <string name="dott_mario_rossi">Dott. Mario Rossi</string>
    <string name="le_mie_terapie">Le mie Terapie</string>
    <string name="gioca_adesso">Gioca adesso</string>
    <string name="sei_sicuro_di_voler_eliminare_la_terapia">Sei sicuro di voler eliminare la terapia?</string>
    <string name="sei_sicuro_di_voler_eliminare_il_paziente">Sei sicuro di voler eliminare il paziente?</string>
    <string name="sei_sicuro_di_voler_eliminare_l_esercizio">Sei sicuro di voler eliminare l\'esercizio?</string>
    <string name="si_rimuovila">Sì, rimuovila</string>
    <string name="no">No</string>
    <string name="risposta_esatta">Risposta esatta!</string>
    <string name="_50_monete">50 Monete</string>
    <string name="_100_punti_esperienza">100 Punti Esperienza</string>
    <string name="peccato_hai_ottenuto_comunque">Peccato! :(\nHai ottenuto comunque:</string>
    <string name="risposta_sbagliata">Risposta sbagliata</string>
    <string name="_25_punti_esperienza">25 Punti Esperienza</string>
    <string name="_10_monete">10 Monete</string>
    <string name="esercizio_terminato">Esercizio terminato</string>
    <string name="esercizio">Esercizio</string>
    <string name="immagine_scelta">Immagine scelta:</string>
    <string name="aiuto_1_colon">"Aiuto 1: "</string>
    <string name="aiuto_2_colon">"Aiuto 2: "</string>
    <string name="aiuto_3_colon">"Aiuto 3: "</string>
    <string name="elimina_esercizio">Elimina esercizio</string>
    <string name="rimuovi_assegnazione">Rimuovi assegnazione</string>
    <string name="parola_1_colon">"Parola 1: "</string>
    <string name="parola_2_colon">"Parola 2: "</string>
    <string name="parola_3_colon">"Parola 3: "</string>
    <string name="esercizio_1">Esercizio 1</string>
    <string name="esercizio_2">Esercizio 2</string>
    <string name="esercizio_3">Esercizio 3</string>
    <string name="esercizio_4">Esercizio 4</string>
    <string name="esercizio_5">Esercizio 5</string>
    <string name="immagine_sbagliata">IMMAGINE\nSBAGLIATA</string>
    <string name="immagine_corretta">IMMAGINE\nCORRETTA</string>
    <string name="parola_da_ascoltare">PAROLA DA ASCOLTARE</string>
    <string name="ascolta_la_parola">Ascolta la parola</string>
    <string name="ascolta_le_parole">Ascolta le parole</string>
    <string name="conferma">Conferma</string>
    <string name="aiuto_1">AIUTO 1</string>
    <string name="aiuto_2">AIUTO 2</string>
    <string name="aiuto_3">AIUTO 3</string>
    <string name="scegli_immagine">Scegli immagine</string>
    <string name="nome_esercizio">NOME ESERCIZIO</string>
    <string name="crea">Crea</string>
    <string name="parola_1">PAROLA 1</string>
    <string name="parola_2">PAROLA 2</string>
    <string name="parola_3">PAROLA 3</string>
    <string name="i_miei_pazienti">I miei pazienti</string>
    <string name="i_miei_esercizi">I miei esercizi</string>
    <string name="shop">Shop</string>
    <string name="_100">100</string>
    <string name="arya">ARYA</string>
    <string name="_500">500</string>
    <string name="nome_contenuto">Nome contenuto</string>
    <string name="acquistato">Acquistato</string>
    <string name="mario_rossi">Mario Rossi</string>
    <string name="mariorossi_gmail_com">mariorossi@gmail.com</string>
    <string name="aggiungi_n_esercizi_per_creare_una_nuova_terapia">Aggiungi n esercizi\nper creare una nuova terapia</string>
    <string name="crea_terapia">Crea terapia</string>
    <string name="elimina_paziente">Elimina paziente</string>
    <string name="visualizza_terapie">Visualizza terapie</string>
    <string name="nome_cognome">Nome Cognome</string>
    <string name="correggi_esercizio">Coreggi Esercizio</string>
    <string name="elimina_terapia">Elimina terapia</string>
    <string name="cf_genitore">"CF Genitore: "</string>
    <string name="gioca">Gioca</string>
    <string name="classifica">Classifica</string>
    <string name="appuntamenti">Appuntamenti</string>
    <string name="figli">Figli</string>
    <string name="esercizi">Esercizi</string>
    <string name="pazienti">Pazienti</string>
    <string name="immagine_corretta_colon">"Immagine corretta: "</string>
    <string name="immagine_sbagliata_colon">"Immagine sbagliata: "</string>
    <string name="parola_da_ascoltare_colon">"Parola da ascoltare: "</string>
    <string name="inserisci_una_email">Inserisci una email</string>
    <string name="inserisci_una_password">Inserisci una password</string>
    <string name="inserisci_un_nome">Inserisci un nome</string>
    <string name="inserisci_un_cognome">Inserisci un cognome</string>
    <string name="inserisci_un_codice_fiscale">Inserisci un codice fiscale</string>
    <string name="conferma_la_password">Conferma la password</string>
    <string name="le_password_non_coincidono">Le password non coincidono</string>
    <string name="inserisci_l_email">Inserisci l\'email</string>
    <string name="inserisci_la_password">Inserisci la password</string>
    <string name="arrivederci">"Arrivederci "</string>
    <string name="benvenuto">"Benvenuto "</string>
    <string name="bentornato">"Bentornato "</string>
    <string name="accesso_negato">Accesso negato</string>
    <string name="inserisci_una_data_di_nascita">Inserisci una data di nascita</string>
    <string name="inserisci_il_codice_fiscale_del_genitore">Inserisci il codice fiscale del genitore</string>
    <string name="bambino_gia_registrato">Bambino già registrato</string>
    <string name="genitore_non_registrato">Genitore non registrato</string>
</resources>