<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/information_group">
        <item
            android:id="@+id/nav_elenco_pazienti"
            android:icon="@drawable/ic_paziente"
            android:iconTint="@color/black"
            android:title="@string/pazienti" />
        <item
            android:id="@+id/nav_elenco_esercizi"
            android:icon="@drawable/ic_exercise"
            android:iconTint="@color/black"
            android:title="@string/esercizi" />
        <item
            android:id="@+id/nav_calendar_logo"
            android:icon="@drawable/ic_date"
            android:iconTint="@color/black"
            android:title="@string/appuntamenti" />
    </group>

    <item
        android:id="@+id/nav_logout_logo"
        android:icon="@drawable/ic_logout"
        android:iconTint="@color/black"
        android:title="@string/logout" />
</menu>

