<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <!-- Primo pulsante -->
    <Button
        android:id="@+id/button190"
        style="@style/CardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_button"
        android:padding="30dp"
        android:text="@string/tipo_es1"
        android:textSize="22dp" />

    <!-- Secondo pulsante -->
    <Button
        android:id="@+id/button191"
        style="@style/CardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button190"
        android:padding="30dp"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_button"
        android:text="@string/tipo_es2"
        android:textSize="22dp" />


    <!-- Terzo pulsante -->
    <Button
        android:id="@+id/button192"
        style="@style/CardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button191"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:padding="30dp"
        android:text="@string/tipo_es3"
        android:textSize="22dp" />

</RelativeLayout>
