<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:paddingBottom="50dp">

        <TextView
            android:id="@+id/textViewEsercizioTerminato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:layout_marginEnd="25dp"
            android:text="@string/risposta_sbagliata"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewDescrizione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_below="@id/textViewEsercizioTerminato"
            android:layout_marginTop="35dp"
            android:text="@string/peccato_hai_ottenuto_comunque" />

        <TextView
            android:id="@+id/textViewMonete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_below="@id/textViewDescrizione"
            android:drawableEnd="@drawable/ic_coin"
            android:drawableTint="@color/yellow"
            android:drawablePadding="8sp"
            android:layout_marginTop="30dp"
            android:text="@string/_10_monete" />

        <TextView
            android:id="@+id/textViewEsperienza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_below="@id/textViewMonete"
            android:drawableEnd="@drawable/ic_esperienza"
            android:drawableTint="#FF0066FF"
            android:drawablePadding="8sp"
            android:layout_marginTop="10dp"
            android:text="@string/_25_punti_esperienza" />

    </RelativeLayout>

</ScrollView>
