<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="25dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="@color/blue"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/txtClose"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginRight="5dp"
            android:drawableEnd="@drawable/ic_close"
            android:drawableTint="@color/white"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/child_profile_image"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/child_profile_image" />

        <TextView
            android:id="@+id/child_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/pippo_baudo"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/child_birthdate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/_18_marzo_74"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/child_therapist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/dott_mario_rossi"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/view_therapy_child"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corners_button_white"
            android:clickable="true"
            android:paddingLeft="10dp"
            android:drawableStart="@drawable/ic_exercise"
            android:text="@string/le_mie_terapie"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/game_child"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners_button_white"
            android:clickable="true"
            android:paddingLeft="10dp"
            android:drawableStart="@drawable/ic_game"
            android:text="@string/gioca_adesso"
            android:visibility="gone"/>



    </LinearLayout>
</androidx.cardview.widget.CardView>
