<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="475dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_margin="25dp"
    app:cardCornerRadius="20dp"
    android:backgroundTint="?attr/colorPrimary"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/exercise_text_close"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginRight="5dp"
            android:drawableEnd="@drawable/ic_close"
            android:drawableTint="@color/white" />

        <ImageView
            android:id="@+id/exercise_profile_image"
            android:layout_width="170dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_exercise"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/id_esercizio1_popup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/esercizio_1"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="30dp"
            android:gravity="center">

            <TextView
                android:id="@+id/ex1_image_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-75dp"
                android:text="@string/immagine_scelta"
                android:textColor="@color/white" />

            <androidx.cardview.widget.CardView
                android:layout_width="109dp"
                android:layout_height="98dp"
                android:layout_gravity="center"
                android:layout_marginLeft="-110dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/ex1_image_viewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="165dp"
            android:layout_height="170dp"
            android:layout_gravity="left"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="-170dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aiuto1_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aiuto_1_colon"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/aiuto2_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/aiuto_2_colon"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/aiuto3_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/aiuto_3_colon"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/delete_exercise_1"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginLeft="50dp"
                android:paddingHorizontal="10dp"
                android:text="@string/elimina_esercizio"
                android:drawableStart="@drawable/ic_delete"
                android:background="@drawable/bg_btn" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deassign_exercise_1"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:paddingHorizontal="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:text="@string/rimuovi_assegnazione"
                android:drawableStart="@drawable/ic_exercise"
                android:background="@drawable/bg_btn" />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
